infra-azuze/k8s/05-grafana-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service-bridge
  namespace: default
spec:
  type: ExternalName
  externalName: monitoring-grafana.monitoring.svc.cluster.local
