infra-azuze/k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phongtro-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 80

          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-service-bridge
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
